objects/Battle_Station__c.object
<CustomObject><fields>
        <fullName>Crew_Members__c</fullName>
        <label>Crew Members</label>
        <summarizedField>Resource__c.Quantity__c</summarizedField>
        <summaryForeignKey>Resource__c.Battle_Station__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Weapons_Status__c</fullName>
        <label>Weapons Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Yet Operational</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fully Operational</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Battle Station</label><nameField>
        <label>Battle Station Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Battle Stations</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>